corrected some typo

--- a/services.html
+++ b/services.html
@@ -97,7 +97,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-worker"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>General Conctructing</h3>
+											<h3>General Constructing</h3>
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 										</div>
 									</div>
@@ -107,7 +107,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-sketch"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>Pre-Contruction Design</h3>
+											<h3>Pre-CONSTRUCTION Design</h3>
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 										</div>
 									</div>
