--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">info@domain.com</a></p>
+									<p><a href="#">info@jadoobabs.com</a></p>
 								</div>
 							</div>
 
@@ -105,7 +105,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>198 West 21th Street, Suite 721 New York NY 10016</p>
+									<p>Address Mobolaji Johnson Estate lekki phase 1,lagos nigeria</p>
 								</div>
 							</div>
 
@@ -114,7 +114,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+123 456 7890</a></p>
+									<p><a href="tel://">+2349034869139</a></p>
 								</div>
 							</div>
 						</div>
