updated the contact page

--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>Address Mobolaji Johnson Estate lekki phase 1,lagos nigeria</p>
+									<p>Mobolaji Johnson Estate, Lekki phase 1,Lagos Nigeria.</p>
 								</div>
 							</div>
 
