udpated the history and missino statement

--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 							<div class="about-desc">
 								<span class="heading-meta">Welcome</span>
 								<h2 class="colorlib-heading">Who we are</h2>
-								<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<p>Our mission is to forge enduring relationships with our clients by delivering on our promises more efficiently and
+									swiftly. We strive to take on the role of problem solvers, applying our specialized skills and knowledge.</p>
 							</div>
 							<div class="row padding">
 								<div class="col-md-4 no-gutters animate-box" data-animate-effect="fadeInLeft">
@@ -120,7 +120,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					<div class="row">
 						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 							<h2 class="colorlib-heading">History</h2>
-							<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+							<p>Jadoobabs Service Limited is at the forefront of Nigeria's industrialization drive, delivering engineering solutions
+								that power progress across key sectors. From oil and gas to solid minerals, our expertise fuels growth and
+								sustainability. With a dedicated in-house team, we excel in design, project management, and consultancy services,
+								shaping the landscape of tomorrow.</p>
 						</div>
 						<div class="col-md-8 animate-box" data-animate-effect="fadeInRight">
 							<div class="fancy-collapse-panel">
@@ -128,7 +131,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Why choose me?
+												<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true"
+													aria-controls="collapseOne">Why choose us?
 									            </a>
 									        </h4>
 									    </div>
@@ -136,11 +140,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-6">
-										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+														<p>As trusted partners to major oil companies, we navigate the complexities of exploration and production, while
+															offering invaluable guidance in downstream operations. Our commitment to excellence permeates every interaction,
+															driving us to continually raise the bar for ourselves and our industry. </p>
 										      		</div>
-										      		<div class="col-md-6">
+													<!-- <div class="col-md-6">
 										      			<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-										      		</div>
+													</div> -->
 										      	</div>
 									         </div>
 									    </div>
@@ -148,30 +154,40 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">What I do?
+												<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false"
+													aria-controls="collapseTwo">What we do?
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-													<ul>
-														<li>Separated they live in Bookmarksgrove right</li>
-														<li>Separated they live in Bookmarksgrove right</li>
-													</ul>
+												<p>At Jadoobabs Service Limited, we specialize in delivering engineering solutions across sectors such as oil and gas,
+													solid minerals, and more, driving Nigeria's industrialization efforts forward. With expertise in design, project
+													management, and consultancy services, our in-house team shapes the landscape of tomorrow. As trusted partners to
+													major oil companies, we navigate the complexities of exploration and production, while offering invaluable support
+													in downstream operations. Committed to excellence and continual innovation, we aim to be among the leading
+													engineering firms by the century's turn, guided by transparency and unwavering dedication to excellence. Join us as
+													we redefine possibilities, one project at a time.</p>
 									        </div>
 									    </div>
 									</div>
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">My Specialties
+												<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false"
+													aria-controls="collapseThree">Our Specialties
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
+												<ul>
+													<li>Oil and Gas Engineering</li>
+													<li>SConstruction Services</li>
+													<li>Electrical Instrumentation</li>
+													<li>Procurement</li>
+													<li>Automation Control</li>
+												</ul>
 									        </div>
 									    </div>
 									</div>
