udpated the services page

--- a/services.html
+++ b/services.html
@@ -97,8 +97,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-worker"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>General Constructing</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<h3>Oil and Gas Engineering</h3>
+											<p>Our expertise in oil and gas engineering encompasses the design, construction, and maintenance of infrastructure
+												crucial to the exploration, production, and distribution of petroleum resources. From drilling platforms to
+												pipelines, we ensure the efficient extraction and transportation of oil and gas resources while prioritizing safety
+												and sustainability.</p>
 										</div>
 									</div>
 
@@ -107,8 +110,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-sketch"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>Pre-CONSTRUCTION Design</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<h3>Procurement</h3>
+											<p>As experts in procurement, we streamline the sourcing and acquisition of materials, equipment, and services necessary
+												for project success. Leveraging our extensive network of suppliers and vendors, we ensure timely delivery of
+												high-quality goods at competitive prices, maximizing efficiency and cost-effectiveness for our clients. </p>
 										</div>
 									</div>
 								</div>
@@ -122,8 +127,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-engineering"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>Building &amp; Modeling</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<h3>Construction Services</h3>
+											<p>With a focus on quality and efficiency, our construction services cover a wide range of projects, including civil
+												construction, infrastructure development, and facility construction. From concept to completion, we deliver
+												innovative solutions tailored to meet the unique needs of each project, ensuring timely delivery and superior
+												craftsmanship.</p>
 										</div>
 									</div>
 
@@ -132,8 +140,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-crane"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>Construction Management</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<h3>Automation Control</h3>
+											<p>Our automation controls expertise focuses on the design, implementation, and optimization of control systems that
+												enhance efficiency, productivity, and safety in industrial processes. From programmable logic controllers (PLCs) to
+												supervisory control and data acquisition (SCADA) systems, we deliver tailored automation solutions that empower our
+												clients to achieve their operational goals with precision and reliability.</p>
 										</div>
 									</div>
 								</div>
