--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">info@JADOOBABS SERVICE LTD.com</a></p>
+									<p><a href="#">info@jadoobabs.com</a></p>
 								</div>
 							</div>
 
