--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-worker"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>General Constructing</h3>
+											<h3>Oil and Gas Engineering</h3>
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 										</div>
 									</div>
@@ -219,7 +219,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 											<i class="flaticon-sketch"></i>
 										</div>
 										<div class="colorlib-text">
-											<h3>Pre-CONSTRUCTION Design</h3>
+											<h3>Construction Services</h3>
 											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 										</div>
 									</div>
