updated the homepage images

--- a/contact.html
+++ b/contact.html
@@ -98,8 +98,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="colorlib-text">
 									<!-- <p><a href="#">info@jadoobabs.com</a></p> -->
 									<p><a href="mailto:info@jabs.com">General Inquiries: info@jadoobabs.com</a></p>
-									<p><a href="mailto:customercare@jabs.com">Customer Care: cinfo@jadoobabs.com</a></p>
-									<p><a href="mailto:travel@jabs.com">Travel Assistance: info@jadoobabs.com</a></p>
+									<p><a href="mailto:customercare@jabs.com">Customer Care: Babatundesegun@jadoobabs.com</a></p>
+									<!-- <p><a href="mailto:travel@jabs.com">Travel Assistance: info@jadoobabs.com</a></p> -->
 								</div>
 							</div>
 
@@ -119,8 +119,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<div class="colorlib-text">
 									<!-- <p><a href="tel://">+2349034869139</a></p> -->
 									<p><a href="tel://+2349034869139">General Inquiries: +2349034869139</a></p>
-									<p><a href="tel://+2349034869139">Customer Care: +2349034869139</a></p>
-									<p><a href="tel://+2349034869139">Travel Assistance: +2349034869139</a></p>
+									<p><a href="tel://+2348125007291">Customer Care: +2348125007291</a></p>
+									<!-- <p><a href="tel://+2349034869139">Travel Assistance: +2349034869139</a></p> -->
 								</div>
 							</div>
 						</div>
