--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6">
-							<div class="about-img animate-box" data-animate-effect="fadeInLeft" style="background-image: url(images/img_bg_2.jpg);">
+							<div class="about-img animate-box" data-animate-effect="fadeInLeft" style="background-image: url(imgs/img_bg_2.jpg);">
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
