--- a/work.html
+++ b/work.html
@@ -90,7 +90,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					</div>
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<div class="project"
+								style="background-image: url(images/img-1.jpg); background-size: cover; background-position: center;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
@@ -104,6 +105,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								</div>
 							</div>
 						</div>
+						
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/img-2.jpg);">
 								<div class="desc">
@@ -150,7 +152,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 							</div>
 						</div>
 						<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-5.jpg);">
+							<div class="project" style="background-image: url(images/blog-3.jpg);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 05</a></h3>
