--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 			<aside id="colorlib-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-					<li style="background-image: url(imgs/img_bg_1.jpg);">
+					<li style="background-image: url(images/img-1.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
