--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 			<aside id="colorlib-hero" class="js-fullheight">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-					<li style="background-image: url(images/img-1.jpg);">
+					<li style="background-image: url(imgs/img_bg_1.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -258,7 +258,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<a href="services.html" class="services-wrap animate-box" data-animate-effect="fadeInRight">
 									<div class="services-img" style="background-image: url(images/services-2.jpg)"></div>
 									<div class="desc">
-										<h3>House Remodeling</h3>
+										<h3>Piping</h3>
 									</div>
 								</a>
 							</div>
@@ -276,7 +276,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<a href="services.html" class="services-wrap animate-box" data-animate-effect="fadeInRight">
 									<div class="services-img" style="background-image: url(images/services-4.jpg)"></div>
 									<div class="desc">
-										<h3>Painting &amp; Tiling</h3>
+										<h3>Maintenance Works</h3>
 									</div>
 								</a>
 							</div>
@@ -284,7 +284,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<a href="services.html" class="services-wrap animate-box" data-animate-effect="fadeInRight">
 									<div class="services-img" style="background-image: url(images/services-5.jpg)"></div>
 									<div class="desc">
-										<h3>Kitchen Remodeling</h3>
+										<h3>Plant Management</h3>
 									</div>
 								</a>
 								</div>
@@ -457,7 +457,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Renovating National Gallery</a></h3>
+									<h3><a href="blog.html">Industrial Instrumentation</a></h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
@@ -467,7 +467,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
+									<h3><a href="blog.html">Industrial scale renovation</a></h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
@@ -477,7 +477,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Make website from scratch</a></h3>
+									<h3><a href="blog.html">Modern and complex piping methods.</a></h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
