--- a/services.html
+++ b/services.html
@@ -164,7 +164,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 							<a href="services.html" class="services-wrap animate-box" data-animate-effect="fadeInRight">
 								<div class="services-img" style="background-image: url(images/services-2.jpg)"></div>
 								<div class="desc">
-									<h3>House Remodeling</h3>
+									<h3>Piping</h3>
 								</div>
 							</a>
 						</div>
@@ -182,7 +182,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 							<a href="services.html" class="services-wrap animate-box" data-animate-effect="fadeInRight">
 								<div class="services-img" style="background-image: url(images/services-4.jpg)"></div>
 								<div class="desc">
-									<h3>Painting &amp; Tiling</h3>
+									<h3>Maintenance Works</h3>
 								</div>
 							</a>
 						</div>
@@ -190,7 +190,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 							<a href="services.html" class="services-wrap animate-box" data-animate-effect="fadeInRight">
 								<div class="services-img" style="background-image: url(images/services-5.jpg)"></div>
 								<div class="desc">
-									<h3>Kitchen Remodeling</h3>
+									<h3>Plant Management</h3>
 								</div>
 							</a>
 						</div>
