--- a/work.html
+++ b/work.html
@@ -91,7 +91,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Made 
 					<div class="row row-bottom-padded-md">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project"
-								style="background-image: url(images/img-1.jpg); background-size: cover; background-position: center;">
+								style="background-image: url(images/blog-4.jpg); background-size: cover; background-position: center;">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
